inicio da criação da interface gráfica

--- a/Trabalho1CG/CMakeLists.txt
+++ b/Trabalho1CG/CMakeLists.txt
@@ -4,3 +4,5 @@ project(trabalho1cg)
 add_executable(trabalho1cg main.cpp)
 
 install(TARGETS trabalho1cg RUNTIME DESTINATION bin)
+
+add_subdirectory(src)
