--- a/Trabalho1CG/CMakeLists.txt
+++ b/Trabalho1CG/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 project(trabalho1cg)
 
-add_executable(trabalho1cg main.cpp)
+set (CMAKE_CXX_STANDARD 11)
+aux_source_directory(. src_list)
+add_executable(trabalho1cg ${src_list})
 
 install(TARGETS trabalho1cg RUNTIME DESTINATION bin)
